# alligator-alcatraz

./: README.md  deploy-all-environments.sh  manage.py  packageInfo  pyproject.toml  refresh-aws-creds.sh  seats.tx  update-stack.sh
alligator_alcatraz/: asgi.py  settings.py  urls.py  wsgi.py
blog/: views.py
blog/templates/blog/: post_list.html
homework/: luckydev_hw_3_1.py  luckydev_hw_3_2.py  test_luckydev_hw_3_1.py  test_luckydev_hw_3_2.py
improvement_plans/: admin.py  apps.py  forms.py  models.py
plans/: models.py
plans/migrations/: 0001_initial.py
poetry_django_plugin/: INSTALL.md  README.md  demo.py  install.sh  pyproject.toml  setup.py
poetry_django_plugin/poetry_django_plugin/: __init__.py  __main__.py  command.py  django_patch.py  manage_template.py  plugin.py
polls/: urls.py
templates/: base.html  footer.html  header.html  index.html
templates/users/: evaluations.html
tickets/: models.py
users/: admin.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
users/fixtures/: applicant-types.json  available-jobs.json  benefit-types.json  cities.json  departments.json  employee-schedules.json  states.json
users/migrations/: 0001_initial.py
users/static/css/: users.css
